# cazan-cli

./: .gitignore  Cargo.toml  README.md  package.json  rollup.config.mjs  tsconfig.json
.github/workflows/: pr.yml  release.yml
src/: cli.ts  config.rs  main.rs  main.ts  terminal.rs
src/cli/: init.rs  lock.rs  mod.rs  prebuild.rs  subcommands.rs
src/commands/: index.ts  init.ts
