[package]
name = "cazan-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cazan"
path = "src/main.rs"

[dependencies]
argh = "0.1.12"
cazan-common = "0.1.1"
serde_json = "1.0.116"
serde_ignored = "0.1.10"
image = "0.25.1"
cprint = { version = "1.0.0", features = ["ceprint"] }
crossterm = { version = "0.27.0", features = ["windows"] }
serde = { version = "1.0.203", features = ["derive"] }
semver = {  version = "1.0.23", features = ["serde"] }
sha2 = "0.10.8"
plotters = "0.3.6"